changed Reach Out link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 class="hero__subtitle">Hi, Im Bryan ✌️</h2>
         <h1 class="her__title">JUNIOR SOFTWARE<br> ENGINEER.</h1>
         <p class="hero__description">An aspiring <strong>Software Engineer</strong> and a newly graduated <strong>Computer Science</strong> major specializing in backend applications.</p>
-        <a class="hero__btn btn" href="#contact">Reach Out</a>
+        <a class="hero__btn btn" href="https://www.linkedin.com/in/bryanlsuh/">Reach Out</a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
