attempting to fix links to resume and PropertyHub link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="/BryanSuhResume_LinkedIn(2024).pdf" target="blank">Resume</a>
+            <a class="mobile-nav__btn btn" href="./public/BryanSuhResume_LinkedIn(2024).pdf" target="blank">Resume</a>
           </li>
         </ul>
       </nav>
