changed PropertyHub button to direct to github and changed all links to open on new tab

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p class="work__project-description1">This website was a group project made from Jan 2023 - May 2023. we used php to connect to a local mySQL database, so the login and signup will not work, as the website is not currently connected to an online database.</p>
             <p class="work__project-description2">Making buying and selling easy. Our customers can view available properties and sell in the comfort of their own homes! <br/>I was responsible for the search bar functionality and validating the functionality works with the local MySQL database.
             </p>
-            <a class="btn work__project-btn" href="./PropertyHub/buyer.html">Website</a>
+            <a class="btn work__project-btn" href="https://github.com/bryansuh0205/PropertyHub">Website</a>
           </div>
           <!-- project 2-->
           <h3 id="Attend-in" class="work__project-title">Attend-in</h3>
