--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p class="work__project-description1">This website was a group project made from Jan 2023 - May 2023. we used php to connect to a local mySQL database, so the login and signup will not work, as the website is not currently connected to an online database.</p>
             <p class="work__project-description2">Making buying and selling easy. Our customers can view available properties and sell in the comfort of their own homes! <br/>I was responsible for the search bar functionality and validating the functionality works with the local MySQL database.
             </p>
-            <a class="btn work__project-btn" href="https://github.com/bryansuh0205/PropertyHub">Website</a>
+            <a class="btn work__project-btn" href="https://github.com/bryansuh0205/PropertyHub" target="blank">GitHub</a>
           </div>
           <!-- project 2-->
           <h3 id="Attend-in" class="work__project-title">Attend-in</h3>
@@ -173,7 +173,7 @@
               For teachers and school systems to use for more ease of attendance taking. Teachers will have a better alternative to manual attendance taking and have more of their valuable time teaching future professionals the knowledge they need.<br/>
               I was responsible for the creation of the PostGreSQL database and all of the login/sign and attendance taking functionalities.
             </p>
-            <a class="btn work__project-btn" href="https://github.com/bryansuh0205/Attend-In">GitHub</a>
+            <a class="btn work__project-btn" href="https://github.com/bryansuh0205/Attend-In" target="blank">GitHub</a>
           </div>
         </div>
       </section>
