--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </button>
           </li>
           <li>
-            <a class="header__resume btn" href="./BryanSuhResume_LinkedIn(2024).pdf" target="blank">RESUME</a>
+            <a class="header__resume btn" href="./BryanSuhResume.pdf" target="blank">RESUME</a>
           </li>
         </ul>
         <button class="header__bars">
@@ -55,7 +55,7 @@
           </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="BryanSuhResume_LinkedIn(2024).pdf" target="blank">Resume</a>
+            <a class="mobile-nav__btn btn" href="BryanSuhResume.pdf" target="blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -74,7 +74,7 @@
           <h2 class="about__title">About</h2>
           <p class="about__description">Hello! I'm Bryan, an aspiring <strong>Software Engineer</strong> based in Georgia. I enjoy building applications that benefit people in any shape or form.</p>
           <p class="about__description">I thrive on challenges and constantly seek opportunities to develop new skills and deepen my knowledge, as I believe there's always room to grow professionally and personally.</p>
-          <p class="about__description"> I am a recent graduate from Georgia State University with a Bachelors of Computer Science.</p>
+          <p class="about__description"> I am a graduate from Georgia State University with a Bachelors of Computer Science.</p>
           <hr class="about__hr">
           <h3 class="about__subtitle">Technologies</h3>
           <div class="about__ul-container">
