--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="hero__img" src="./public/hero.jpg" alt="profile picture" />
         <h2 class="hero__subtitle">Hi, Im Bryan ✌️</h2>
         <h1 class="her__title">JUNIOR SOFTWARE<br> ENGINEER.</h1>
-        <p class="hero__description">An aspiring <strong>Software Engineer</strong> and a newly graduated <strong>Computer Science</strong> major specializing in backend applications.</p>
+        <p class="hero__description">An aspiring <strong>Software Engineer</strong> and a <strong>Computer Science</strong> graduate specializing in backend applications.</p>
         <a class="hero__btn btn" href="https://www.linkedin.com/in/bryanlsuh/" target="blank">Reach Out</a>
       </section>
       <section id="about" class="about container section">
